--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 /* header */
 .header {
+  position: sticky;
+  top: 0px;
+  z-index: 1;
   width: 100%;
   height: 89px;
   background-color: #2d303a;
@@ -48,20 +51,23 @@ a {
   width: 380px;
   height: 100%;
 }
-.header__navigation .navigation {
+.navigation {
   display: flex;
   justify-content: space-between;
   padding-left: 8px;
   list-style: none;
 }
-.header__navigation .navigation .navigation__item .navigation__link {
+.navigation__link {
   font-weight: bold;
   font-size: 12px;
   line-height: 68px;
   font-family: "Lato", sans-serif;
   color: #ffffff;
 }
-.header__navigation .navigation .navigation__item:not(:first-child)::before {
+.active{
+  color: #f06c64;
+}
+.navigation__item:not(:first-child)::before {
   content: ".";
   position: relative;
   font-weight: 400;
@@ -71,10 +77,11 @@ a {
   bottom: 3px;
   left: -13px;
 }
-.header__navigation .navigation .navigation__item .navigation__link:hover {
+.navigation__link:hover {
   color: #f06c64;
   transition: 0.3s;
 }
+
 
 /* main */
 .main {
@@ -89,6 +96,7 @@ a {
   -webkit-box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
   -moz-box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
   box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
+  scroll-margin-top: 95px;
 }
 .slider__content {
   position: relative;
@@ -103,6 +111,7 @@ a {
   left: 42px;
   width: 16px;
   height: 27px;
+  z-index: 1;
 }
 .slider__iphone-vertical {
   position: absolute;
@@ -110,6 +119,7 @@ a {
   left: 112px;
   width: 240px;
   height: 483px;
+  cursor: pointer;
 }
 .slider__iphone-horizontal {
   position: absolute;
@@ -117,6 +127,33 @@ a {
   right: 111px;
   width: 484px;
   height: 240px;
+  cursor: pointer;
+}
+.black-vertical{
+  position: absolute;
+  top: 118px;
+  left: 125px;;
+  width: 189px;
+  height: 333px;
+  background-color: black;
+}
+.black-horizontal{
+  position: absolute;
+  top: 186px;
+  left: 485px;;
+  width: 333px;
+  height: 189px;
+  background-color: black; 
+}
+.slider2{
+  position: absolute;
+  background: url("assets/icons/slider2.svg") center;
+  width: 940px;
+  height: 600px;
+}
+.hidden,
+.none {
+  display: none;
 }
 .slider__next-arrow {
   position: absolute;
@@ -124,6 +161,7 @@ a {
   right: 40px;
   width: 16px;
   height: 27px;
+  z-index: 1;
 }
 .slider__previous-arrow:hover,
 .slider__next-arrow:hover {
@@ -139,6 +177,7 @@ a {
   -webkit-box-shadow: inset 0 -6px 0 0 rgba(255, 255, 255, 1);
   -moz-box-shadow: inset 0 -6px 0 0 rgba(255, 255, 255, 1);
   box-shadow: inset 0 -6px 0 0 rgba(255, 255, 255, 1);
+  scroll-margin-top: 95px;
 }
 .services__content {
   width: 940px;
@@ -291,11 +330,13 @@ a {
   left: 90px;
 }
 .portfolio {
+  scroll-margin-top: 95px;
   width: 100%;
   height: 863px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   overflow: hidden;
+  
 }
 .portfolio__content {
   max-width: 940px;
@@ -342,9 +383,12 @@ a {
   border-radius: 5px;
   transition: 0.3s;
 }
-.tag:active,
-.tag:hover,
-.tag:focus {
+.tag:hover {
+  color: #c3c4c5;
+  border: 1px solid #c3c4c5;
+  outline: none;
+}
+.tag-active {
   color: #c3c4c5;
   border: 1px solid #c3c4c5;
   outline: none;
@@ -355,13 +399,10 @@ a {
   height: 643px;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-content: space-evenly;
+  align-content: space-evenly; 
   padding-left: 0px;
-  margin-top: -1px;
+  margin-top: -1px; 
   list-style: none;
-}
-.portfolio__items li:nth-child(n + 9) {
-  margin-top: -2px;
 }
 .portfolio__items li:nth-child(n + 13) {
   display: none;
@@ -369,20 +410,24 @@ a {
 .image {
   height: 187px;
   width: 220px;
+  top: 0;
+  left: 0;
+  position: relative;
+ 
 }
-.image:hover {
-  transform: scale(1.1);
-  transition: 0.3s;
-  cursor: pointer;
+.bordered {
+  outline: 5px solid #f06c64;
 }
 
 /* about-us */
 
 .about-us {
+  scroll-margin-top: 95px;
   width: 100%;
   height: 728px;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
+  
 }
 .about-us__content {
   max-width: 940px;
@@ -478,6 +523,7 @@ a {
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
   overflow: hidden;
+  scroll-margin-top: 95px;
 }
 .quote__content {
   max-width: 940px;
@@ -606,6 +652,183 @@ textarea::placeholder {
   margin-top: -14px;
   margin-left: 20px;
 }
+
+
+/* ------ Input hints ------ */
+/* 
+.quote__name-hint {
+  position: absolute;
+  width: 250px;
+  height: 38px;
+  background: #fff;
+  color: #666d89;
+  opacity: 0.8;
+  top: 50px;
+  left: 50%;
+  padding-left: 10px;
+  padding-top: 12px;
+  font-size: 12px;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+
+.quote__name-hint:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  border-left: 10px solid #fff;
+  border-right: 10px solid transparent;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+.quote__mail-hint {
+  position: absolute;
+  width: 250px;
+  height: 38px;
+  background: #fff;
+  color: #666d89;
+  opacity: 0.8;
+  top: 104px;
+  left: 50%;
+  padding-left: 10px;
+  padding-top: 12px;
+  font-size: 12px;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+
+.quote__mail-hint:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  border-left: 10px solid #fff;
+  border-right: 10px solid transparent;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+
+.quote__mail-hint-second {
+  position: absolute;
+  width: 250px;
+  height: 38px;
+  background: #fff;
+  color: #666d89;
+  opacity: 0.8;
+  top: 104px;
+  left: 50%;
+  padding-left: 10px;
+  padding-top: 12px;
+  font-size: 12px;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+
+.quote__mail-hint-second:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  border-left: 10px solid #fff;
+  border-right: 10px solid transparent;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
+ */
+
+/* ------ Modal window ------ */
+/* 
+.modal-window {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-window__content {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 350px;
+  height: 200px;
+  border-radius: 5px;
+  background-color: #fff;
+  opacity: 0.8;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+@-webkit-keyframes animatetop {
+  from {
+      top: -300px;
+      opacity: 0
+  }
+  to {
+      top: 0;
+      opacity: 1
+  }
+}
+
+@keyframes animatetop {
+  from {
+      top: -300px;
+      opacity: 0
+  }
+  to {
+      top: 0;
+      opacity: 1
+  }
+}
+
+.modal-window__title {
+  margin-bottom: 30px;
+}
+
+.modal-window__content p {
+  margin-top: 10px;
+  font-size: 13px;
+  color: #666d89;
+}
+
+.modal-window__subject {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.modal-window__submit-btn {
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 70px;
+  height: 25px;
+  font-size: 12px;
+  background-color: #f48c8f;
+  color: #fff;
+}
+
+.modal-window__submit-btn:hover {
+  color: #fff;
+  background-color: #d6564f;
+}
+ */
+
 .contact-form__info h3 {
   width: 168px;
   height: 14px;
