--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ html {
   -moz-box-shadow: 0 6px 0 0 rgba(50, 55, 70, 1);
   box-shadow: 0 6px 0 0 rgba(50, 55, 70, 1);
 }
+@media screen and (min-width: 375px){
+  .header {
+    box-shadow: 0 6px 0 0 #2d303a;
+  }
+}
 a {
   color: #ffffff;
   text-decoration: none;
@@ -26,7 +31,7 @@ a {
 .header__content {
   display: flex;
   justify-content: space-between;
-  width: 940px;
+  max-width: 940px;
   height: 100%;
   margin: 0 auto;
   padding: 0 40px;
@@ -43,6 +48,13 @@ a {
   color: #ffffff;
   position: relative;
   top: 5px;
+}
+@media screen and (max-width: 375px){
+  .logo__name{
+    left: 32%;
+    top: 8%;
+    font-size: 1.7rem;
+  }
 }
 .star {
   position: relative;
@@ -61,12 +73,36 @@ a {
   padding-left: 8px;
   list-style: none;
 }
+@media screen and (max-width: 375px){
+  .navigation{
+    position: absolute;
+    height: 92vh;
+    width: 65%;
+    left: 0;
+    top: 8vh;
+    background-color: #2d303a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transform: translateX(-100%);
+    transition: transform .5s ease-in;
+  }
+  .navigation li {
+    opacity: 0;
+  }
+}
 .navigation__link {
   font-weight: bold;
   font-size: 12px;
   line-height: 68px;
   font-family: "Lato", sans-serif;
   color: #ffffff;
+}
+@media screen and (max-width: 375px){
+  .navigation__link{
+    margin-left: 55px;
+    font-size: 1.3rem;
+  }
 }
 .active{
   color: #f06c64;
@@ -85,84 +121,143 @@ a {
   color: #f06c64;
   transition: 0.3s;
 }
+.burger{
+  position: absolute;
+  left: 17px;
+  top: 30px;
+  display: none;
+}
+.burger > div{
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 7px;
+  border-radius: 25%;
+  transition: all .5s ease;
+}
+@media screen and (max-width: 375px){
+  .burger{
+    display: block;
+    cursor: pointer;
+  }
+}
+.navigation-active{
+  transform: translateX(0);
+}
+@keyframes navLinkFade{
+  from{
+    opacity: 0;
+    transform: translate(25px);
+  }
+  to{
+    opacity: 1;
+    transform: translate(0px)
+  }
+}
+.toggle .line1{
+  transform: rotate(-90deg) translate(-10px, -10px);
+}
+.toggle .line2{
+  transform: rotate(-90deg) translate(0px, 0px);
+}
+.toggle .line3{
+  transform: rotate(-90deg) translate(10px, 10px);
+}
 
 /* main */
 
 .main {
   width: 100%;
-  min-height: 100px;
   margin-top: 6px;
 }
 .slider {
-  width: 100%;
-  height: 594px;
   background-color: #f06c64;
   -webkit-box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
   -moz-box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
   box-shadow: 0 6px 0 0 rgba(234, 103, 107, 1);
   scroll-margin-top: 95px;
 }
+@media screen and (max-width: 1019px){
+  .slider{
+    max-height: 600px;
+    height: 58.15vw;
+  }
+}
+@media screen and (max-width: 375px){
+  .slider{
+    box-shadow: 0 6px 0 0 #f06c64;
+  }
+}
 .slider1 {
   position: absolute;
-  width: 940px;
-  height: 600px;
+  width:100%;
+  height: 100%;
   display: none;
 }
 .slider1.show {
   display: block;
 }
+
 .slider__content {
   position: relative;
-  width: 940px;
-  height: 100%;
+  display: flex;
+  max-width: 940px;
+  max-height: 594px;
   margin: 0 auto;
   padding: 0 40px;
+  height: 58.15vw;
 }
 .slider__previous-arrow {
   position: absolute;
   top: 281px;
-  left: 42px;
+  left: 70px;
   width: 16px;
   height: 27px;
   z-index: 1;
 }
-.slider1 .slider__iphone-vertical {
+.slider__iphone-vertical {
   position: absolute;
-  top: 53px;
+  top: 54px;
   left: 73px;
-  width: 240px;
-  height: 483px;
+  max-width: 240px;
+  width: 100%;
+  max-height: 483px;
+  height: 100%;
   cursor: pointer;
 }
-.slider1 .slider__iphone-horizontal {
+.slider__iphone-horizontal {
   position: absolute;
   top: 173px;
-  right: 71px;
-  width: 484px;
-  height: 240px;
+  right: 150px;
+  max-width: 483px;
+  width: 100%;
+  max-height: 240px;
+  height: 100%;
   cursor: pointer;
 }
 .black-vertical{
   position: absolute;
-  top: 118px;
+  top: 119px;
   left: 126px;;
   width: 189px;
   height: 333px;
   background-color: black;
+  cursor: pointer;
 }
 .black-horizontal{
   position: absolute;
   top: 186px;
-  left: 485px;;
+  left: 486px;;
   width: 333px;
   height: 189px;
   background-color: black; 
+  cursor: pointer;
 }
 .slider2{
   position: absolute;
   background: url("assets/icons/slider2.svg") center;
-  width: 940px;
-  height: 600px;
+  width: calc(100% - 78px);
+  height: calc(100% + 6px);
   display: none;
 }
 .slider2.show{
@@ -175,7 +270,7 @@ a {
 .slider__next-arrow {
   position: absolute;
   top: 281px;
-  right: 40px;
+  right: 70px;
   width: 16px;
   height: 27px;
   z-index: 1;
@@ -230,7 +325,7 @@ a {
 /* Services */
 .services {
   width: 100%;
-  height: 500px;
+  height: 100%;
   margin-top: 6px;
   background-color: #f2f2f2;
   -webkit-box-shadow: inset 0 -6px 0 0 rgba(255, 255, 255, 1);
@@ -238,11 +333,17 @@ a {
   box-shadow: inset 0 -6px 0 0 rgba(255, 255, 255, 1);
   scroll-margin-top: 95px;
 }
-.services__content {
-  width: 940px;
-  margin: 0 auto;
-  padding: 62px 40px 0 40px;
+@media screen and (max-width: 375px){
+  .services{
+    box-shadow: 0 6px 0 0 #f2f2f2;
+  }
 }
+.services__content {
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 62px 40px 60px 40px;
+}
+
 .services__topic {
   margin: 0;
   font-weight: 900;
@@ -260,7 +361,6 @@ a {
   text-align: justify;
   color: #666d89;
   letter-spacing: -0.014rem;
-  overflow: hidden;
 }
 .layout-3-column {
   display: flex;
@@ -268,11 +368,63 @@ a {
   justify-content: space-between;
   margin-top: 51px;
 }
+@media screen and (max-width: 699px){
+  .layout-3-column{
+    justify-content: center;
+    padding-top: 25px;
+  }
+  
+  .cell__item .cell__bulb{
+    left: 0px;
+    padding-right: 20px;
+  }
+  .cell__item .cell__heart{
+    left: 0px;
+    padding-right: 20px;
+  }
+  .cell__item .cell__phone{
+    left: 0px;
+    padding-right: 20px;
+  }
+  .cell__item .cell__bubble{
+    left: 0px;
+    padding-right: 20px;
+  }
+  .cell__item .cell__star{
+    left: 0px;
+    padding-right: 20px;
+  }
+}
+@media screen and (max-width: 540px){
+  .layout-3-column{
+    padding-top: 55px;
+  }
+}
+@media screen and (max-width: 450px){
+  .layout-3-column{
+    padding-top: 85px;
+  }
+}
+@media screen and (max-width: 395px){
+  .layout-3-column{
+    padding-top: 115px;
+  }
+}
+@media screen and (max-width: 375px){
+  .layout-3-column{
+    padding-top: 140px;
+  }
+}
+@media screen and (max-width: 330px){
+  .layout-3-column{
+    padding-top: 175px;
+  }
+}
 .cell__item {
   position: relative;
-  width: 310px;
+  max-width: 310px;
+  width: 100%;
   height: 100px;
-  overflow: hidden;
 }
 .cell__item:nth-child(-n + 3) {
   margin-bottom: 23px;
@@ -315,7 +467,7 @@ a {
   color: #666d89;
 }
 .cell__text {
-  width: 220px;
+  max-width: 220px;
   margin: 0;
   overflow: hidden;
   font-weight: normal;
@@ -324,6 +476,30 @@ a {
   font-family: "Lato", sans-serif;
   text-align: justify;
   color: #666d89;
+}
+@media screen and (max-width: 699px){
+  .cell__item .cell__topic-design,
+  .cell__item .text-design,
+  .cell__item .cell__topic-ideas,
+  .cell__item .cell__text-ideas,
+  .cell__item .cell__topic-answer,
+  .cell__item .cell__text-answer,
+  .cell__item .cell__topic-layout,
+  .cell__item .cell__text-layout,
+  .cell__item .cell__topic-support,
+  .cell__item .cell__text-support,
+  .cell__item .cell__topic-star,
+  .cell__item .cell__text-star{
+    left: 82px;
+  }
+}
+@media screen and (max-width: 375px){
+  .cell__item:nth-child(5){
+    top: 20px;
+  }
+  .cell__item:last-child{
+    top: 40px;
+  }
 }
 .cell__topic-design {
   position: absolute;
@@ -391,20 +567,24 @@ a {
 .portfolio {
   scroll-margin-top: 95px;
   width: 100%;
-  height: 863px;
+  height: 100%;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   overflow: hidden;
-  
+}
+@media screen and (max-width: 375px){
+  .main .portfolio{
+    border-bottom: 6px solid #2d303a;
+  }
 }
 .portfolio__content {
   max-width: 940px;
-  height: 100%;
+  max-height: 100%;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0px 40px 33px 40px;
 }
 .portfolio__topic {
-  padding-top: 47px;
+  padding-top: 48px;
   max-width: 121px;
   max-height: 23px;
   color: #666d89;
@@ -422,57 +602,159 @@ a {
   font-weight: 300;
   line-height: 30px;
   word-spacing: -0.08rem;
-  padding-top: -4px;
-}
-.portfolio__tags {
-  color: #767e9e;
   padding-top: 3px;
 }
+
+.portfolio__tags {
+  color: #767e9e;
+  padding-top: 4px;
+}
+.tags {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.tags li:not(:last-child) {
+  margin-right: 10px;
+}
+
 .tag {
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: normal;
   font-size: 12px;
   color: #767e9e;
   background-color: transparent;
   cursor: pointer;
   outline: none;
-  padding: 3px 7px;
-  margin-right: 5px;
   border: 1px solid #666d89;
   border-radius: 5px;
   transition: 0.3s;
 }
-.tag:hover {
-  color: #c3c4c5;
-  border: 1px solid #c3c4c5;
-  outline: none;
-}
+
 .tag-active {
-  color: #c3c4c5;
-  border: 1px solid #c3c4c5;
-  outline: none;
+  color: #dedede;
+  cursor: auto;
+  border: 1px solid #c5c5c5;
 }
+
+.tags li:nth-child(1) .tag {
+  padding: 3px 6px 4px 7px;
+}
+
+.tags li:nth-child(2) .tag {
+  padding: 3px 6px 4px 6px;
+}
+
+.tags li:nth-child(3) .tag {
+  padding: 3px 5px 4px 6px;
+}
+
+.tags li:nth-child(4) .tag {
+  padding: 3px 4px 4px 7px;
+}
+
+
 .portfolio__items {
   display: flex;
-  width: 100%;
-  height: 643px;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-content: space-evenly; 
   padding-left: 0px;
-  margin-top: -1px; 
+  margin-top: 17px;
   list-style: none;
 }
-.portfolio__items li:nth-child(n + 13) {
-  display: none;
+.portfolio__link{
+  width: calc(25% - 15px);
+  max-height: 187px;
+  margin-bottom: 20px;
 }
-.image {
-  height: 187px;
-  width: 220px;
-  top: 0;
-  left: 0;
-  position: relative;
- 
+.image{
+  width: 100%;
+  height: 100%;
+}
+@media screen and (max-width: 1019px) {
+  .portfolio__link {
+      width: calc(33% - 10px);
+      max-height: 244px;
+  }
+}
+@media screen and (max-width: 768px){
+  .portfolio {
+    padding-bottom: 0;
+    border-bottom: 6px solid #323746;
+  }
+
+  .portfolio__link {
+    width: calc(50% - 10px);
+  }
+
+  .portfolio__link:nth-child(n + 13) {
+    display: none;
+  }
+
+  .tag {
+    margin-bottom: 10px;
+  }
+  .tags{
+    padding-top: 25px;
+  }
+  .portfolio__text {
+    margin-right: 45px;
+  }
+
+  .portfolio__link {
+    width: calc(33% - 11px);
+    max-height: 184px;
+  }
+}
+@media screen and (max-width: 470px) {
+  .portfolio__text {
+    padding-bottom: 25px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .portfolio__link:nth-child(n + 9) {
+    display: none;
+  }
+  .portfolio__topic{
+    padding-top: 25px;
+  }
+  .portfolio__content {
+      padding: 0px 0px 25px 20px;
+    }
+    .tags{
+      padding-top: 40px;
+  }
+  .portfolio__text{
+    padding-right: 20px;
+  }
+
+  .portfolio__topic,
+  .portfolio__text,
+  .portfolio__tags {
+    margin-left: 30px;
+  }
+
+  .portfolio__tags {
+    margin-top: 17px;
+  }
+
+  .portfolio__items {
+    margin: 15px 30px 0 30px;
+  }
+
+  .portfolio__link {
+    width: calc(50% - 6px);
+    max-height: 128px;
+    margin-bottom: 14px;
+  }
+}
+@media screen and (max-width: 345px) {
+  .portfolio__text{
+    padding-bottom: 30px;
+  }
 }
 .bordered {
   outline: 5px solid #f06c64;
@@ -483,16 +765,19 @@ a {
 .about-us {
   scroll-margin-top: 95px;
   width: 100%;
-  height: 728px;
+  height: 100%;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
-  
+}
+@media screen and (max-width: 375px){
+  .main .about-us{
+    border-bottom: 6px solid #f2f2f2;
+  }
 }
 .about-us__content {
   max-width: 940px;
-  height: 100%;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0px 40px 44px 40px;
   overflow: hidden;
 }
 .about-us__topic {
@@ -519,6 +804,31 @@ a {
   word-spacing: -0.028rem;
   top: -4px;
 }
+@media screen and (max-width: 768px){
+  .about-us__text{
+    padding-bottom: 20px;
+  }
+}
+@media screen and (max-width: 545px){
+  .about-us__text{
+    padding-bottom: 45px;
+  }
+}
+@media screen and (max-width: 455px){
+  .about-us__text{
+    padding-bottom: 75px;
+  }
+}
+@media screen and (max-width: 405px){
+  .about-us__text{
+    padding-bottom: 105px;
+  }
+}
+@media screen and (max-width: 383px){
+  .about-us__text{
+    padding-bottom: 160px;
+  }
+}
 .three-column-layout {
   display: flex;
   flex-direction: row;
@@ -526,11 +836,21 @@ a {
   justify-content: space-between;
   padding-top: 34px;
 }
+@media screen and (max-width: 565px){
+  .three-column-layout{
+    flex-wrap: wrap;
+  }
+}
 .personal__card {
-  height: 443px;
+  max-height: 100%;
+  max-width: 100%;
+}
+.personal__card:not(:last-child){
+  padding-right: 21px;
 }
 .personal__card-photo {
-  height: 300px;
+  max-width: 100%;
+  max-height: 100%;
 }
 .personal__card-name {
   position: relative;
@@ -546,7 +866,7 @@ a {
 }
 .personal__card-text {
   position: relative;
-  width: 300px;
+  max-width: 300px;
   height: 32px;
   font-size: 12px;
   line-height: 21.56px;
@@ -577,21 +897,26 @@ a {
 /* quote */
 
 .quote {
-  height: 648px;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
   overflow: hidden;
   scroll-margin-top: 95px;
 }
+@media screen and (max-width: 375px){
+  .main .quote{
+    border-bottom: 6px solid #f06c64;
+  }
+}
 .quote__content {
   max-width: 940px;
-  height: 100%;
   margin: 0 auto;
-  padding: 48px 40px 0px;
+  padding: 46px 40px 16px 40px;
 }
 .quote__title {
-  width: 170px;
+  max-width: 170px;
+  width: 100%;
   height: 20px;
   color: #f0d8d9;
   font-family: "Lato", sans-serif;
@@ -602,8 +927,9 @@ a {
   letter-spacing: 0.018rem;
 }
 .quote__text {
-  width: 939px;
-  height: 47px;
+  max-width: 939px;
+  width: 100%;
+  max-height: 47px;
   color: #f0d8d9;
   font-family: "Lato", sans-serif;
   font-size: 18px;
@@ -614,30 +940,73 @@ a {
   word-spacing: 0.018rem;
   letter-spacing: -0.015rem;
 }
+@media screen and (max-width: 680px){
+  .quote__text{
+    padding-bottom: 20px;
+  }
+}
+@media screen and (max-width: 535px){
+  .quote__text{
+    padding-bottom: 52px;
+  }
+}
+@media screen and (max-width: 450px){
+  .quote__text{
+    padding-bottom: 78px;
+  }
+}
+@media screen and (max-width: 395px){
+  .quote__text{
+    padding-bottom: 120px;
+  }
+}
+@media screen and (max-width: 375px){
+  .quote__text{
+    padding-bottom: 150px;
+  }
+}
+@media screen and (max-width: 330px){
+  .quote__text{
+    padding-bottom: 190px;
+  }
+}
 .contact-form {
   display: flex;
   justify-content: space-between;
-  margin-top: 72px;
-  max-width: 619px;
-  height: 418px;
+  padding-top: 72px;
+  width: 100%;
+  height: 100%;
+}
+@media screen and (max-width: 655px){
+  .contact-form{
+    flex-wrap: wrap;
+  }
+  .quote__content .contact-form .contact-form__info{
+    padding-top: 32px;
+    padding-bottom: 45px;
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+  .quote__content .contact-form  .contact-form__button{
+    max-width: 565px;
+  }
 }
 
 /* Form */
 
-input,
-textarea,
 .contact-form__button {
   display: block;
 }
 .contact-form__info {
   height: 195px;
-  width: 305px;
-}
-.contact-form .contact-form__info h3 {
-  width: 175px;
+  max-width: 305px;
+  padding-left: 15px;
+  width: 100%;
 }
 input {
-  width: 604px;
+  max-width: 604px;
+  min-width: 200px;
+  width: 100%;
   height: 38px;
   background-color: #d6564f;
   border: none;
@@ -650,6 +1019,14 @@ input {
   line-height: 30px;
   padding-left: 15px;
 }
+@media screen and (max-width: 655px){
+  input{
+    width: 97.4%;
+  }
+  .quote__textarea{
+    width: 97.0%;
+  }
+}
 input:hover {
   background-color: #a74540;
 }
@@ -657,7 +1034,8 @@ input:not(:first-child) {
   margin-top: 14px;
 }
 input::placeholder {
-  width: 88px;
+  max-width: 88px;
+  width: 100%;
   color: #f48c8f;
   font-family: "Lato", sans-serif;
   font-size: 12px;
@@ -666,7 +1044,8 @@ input::placeholder {
 }
 textarea {
   margin-top: 14px;
-  width: 601px;
+  max-width: 601px;
+  width: 100%;
   height: 200px;
   background-color: #d6564f;
   border: none;
@@ -680,11 +1059,17 @@ textarea {
   line-height: 30px;
   padding-left: 15px;
 }
+@media screen and (max-width: 768px){
+  textarea{
+    height: 158px;
+  }
+}
 textarea:hover {
   background-color: #a74540;
 }
 textarea::placeholder {
-  width: 168px;
+  max-width: 168px;
+  width: 100%;
   height: 11px;
   color: #f48c8f;
   font-family: "Lato", sans-serif;
@@ -696,7 +1081,8 @@ textarea::placeholder {
 .contact-form__button {
   margin-top: 14px;
   height: 38px;
-  width: 115px;
+  max-width: 115px;
+  width: 100%;
   background-color: #d6564f;
   border: 1px solid #f0d8d9;
   border-radius: 5px;
@@ -765,7 +1151,8 @@ textarea::placeholder {
 /* Contact info */
 
 .contact-form__info h3 {
-  width: 168px;
+  max-width: 168px;
+  width: 100%;
   height: 14px;
   color: #f0d8d9;
   font-family: "Lato", sans-serif;
@@ -777,7 +1164,8 @@ textarea::placeholder {
 }
 .contact-form__info p {
   position: relative;
-  width: 301px;
+  max-width: 301px;
+  width: 100%;
   color: #f0d8d9;
   font-family: "Lato", sans-serif;
   font-size: 12px;
@@ -873,6 +1261,14 @@ textarea::placeholder {
   word-spacing: 0.01rem;
   letter-spacing: 0.015rem;
   bottom: 13px;
+}
+@media screen and (max-width: 500px){
+  .copyright{
+    display: none;
+  }
+  .social-media-icons{
+    margin: 0 auto;
+  }
 }
 .copyright ul {
   display: flex;
